--- a/Desktop/nodeAppSencilla/src/views/proyectos.ejs
+++ b/Desktop/nodeAppSencilla/src/views/proyectos.ejs
@@ -20,7 +20,7 @@
                   <h5 class="card-title">Pagina de presentacion.</h5>
                   <p class="fw-semibold card-text">En este proyecto se puede observar el uso de las tecnologias node.js, css, bootstrap, JavaScript y html</p>
                   <a href="https://github.com/Javierdiaz1386/pagina-javier-1" target="_blank" class="btn btn-primary">Repositorio</a>
-                  <a href="https://cvjavier.herokuapp.com/proyectos" target="_blank" class="btn btn-primary">Resultado</a>
+                  <a href="https://cvjavier.herokuapp.com/proyectos" target="_blank" class="btn btn-success">Resultado</a>
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
