--- a/Desktop/nodeAppSencilla/src/views/proyectos.ejs
+++ b/Desktop/nodeAppSencilla/src/views/proyectos.ejs
@@ -26,9 +26,10 @@
               <div class="card" style="width: 18rem;">
                 <img src="img/Screenshot_52.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Lorem </h5>
-                  <p class="card-text fw-semibold">Web creada con Django, Python y uso d eun CRUD con potsgresql </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Todo List</h5>
+                  <p class="card-text fw-semibold">Web creada con Django, Python y uso de un CRUD con potsgresql </p>
+                  <a href="https://github.com/Javierdiaz1386/todoList-con-django" class="btn btn-primary">Repositorio</a>
+                  <a href="https://todolist-javier.herokuapp.com" class="btn btn-success">Resultado</a>
                 </div>
               </div>
         </div>
